--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build with Maven Wrapper
       run: ./mvnw clean package -DskipTests
 
-    - name: Upload JAR as artifact
+    - name: Upload JAR as artifactS
       uses: actions/upload-artifact@v4
       with:
         name: springboot-jar
@@ -32,10 +32,10 @@ jobs:
 
     # Docker Build & Push
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/Spring02:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/spring02:latest .
 
     - name: Login to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/Spring02:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/spring02:latest
